--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "presentation on node tdd",
   "main": "calc.js",
   "scripts": {
-    "test": "mocha ./test/calc_spec.js"
+    "test": "mocha ./test/*.js"
   },
   "repository": "",
   "keywords": [
